--- a/gmall_manage_service/src/main/resources/application.properties
+++ b/gmall_manage_service/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.dubbo.protocol.name=dubbo
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
+
+#redis.gmall.com
+spring.redis.host=192.168.220.130
+spring.redis.port=6379
+spring.redis.database=0
