--- a/gamll_cart_web/src/main/resources/application.properties
+++ b/gamll_cart_web/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8087
+server.port=8086
 
-spring.dubbo.application.name=passport-web
+spring.dubbo.application.name=cart-web
 spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.220.130:2181
-spring.dubbo.base-package=com.gmall.passport
+spring.dubbo.base-package=com.gmall.cartweb
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.consumer.timeout=1000000
 spring.dubbo.consumer.check=false
