--- a/gmall_cart_service/src/main/resources/application.properties
+++ b/gmall_cart_service/src/main/resources/application.properties
@@ -1,16 +1,21 @@
-server.port=8094
+server.port=8096
 
-spring.elasticsearch.jest.uris=http://192.168.220.130:9200
+logging.level.root=info
 
 spring.datasource.url=jdbc:mysql://192.168.220.130:3306/gmall?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.dubbo.application.name=list-service
+
+spring.dubbo.application.name=cart-service
 spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.220.130:2181
-spring.dubbo.base-package=com.gmall.list
+spring.dubbo.base-package=com.gmall.cartservice
 spring.dubbo.protocol.name=dubbo
+
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
+
 
 spring.redis.host=192.168.220.130
 spring.redis.port=6379
