--- a/gmall_payment/src/main/resources/application.properties
+++ b/gmall_payment/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.activemq.broker-url=tcp://mq.gmall.com:61616
 spring.activemq.in-memory=true
 spring.activemq.pool.enabled=true
 
+activemq.listener.enable=true
+
