--- a/gmall_order_service/src/main/resources/application.properties
+++ b/gmall_order_service/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.220.130:2181
 spring.dubbo.base-package=com.gmall.order
 spring.dubbo.protocol.name=dubbo
+spring.dubbo.consumer.timeout=10000
+spring.dubbo.consumer.check=false
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
