--- a/gware-manage/src/main/resources/application.properties
+++ b/gware-manage/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://db.gmall.com:3306/gmall0401?characterEncoding=UTF-8
-spring.datasource.password=123123
+spring.datasource.url=jdbc:mysql://db.gmall.com:3306/gmall?characterEncoding=UTF-8
+spring.datasource.password=123456
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -12,9 +12,9 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
 
 
-#spring.activemq.broker-url=tcp://192.168.67.202:61616
-#spring.activemq.in-memory=true
-#spring.activemq.pool.enabled=false
+spring.activemq.broker-url=tcp://mq.gmall.com:61616
+spring.activemq.in-memory=true
+spring.activemq.pool.enabled=false
 
 activemq.listener.enable=true
 
